<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.OrderDetailsUsersActivity">

    //Adding options (button) to write review in order details
    //so if user has ordered then he can write review

    //toolbar
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/purple_200">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#E8E4D9"
            android:drawableBottom="@drawable/ic_arrow_back_"
            tools:ignore="SpeakableTextPresentCheck" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/order_details"
            android:textColor="#E8E4D9"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/writeReviewBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="#E8E4D9"
            android:drawableBottom="@drawable/ic_rate_review"
            tools:ignore="SpeakableTextPresentCheck" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:contentPadding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/orderid"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/orderIdTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/_12121212"
                    android:textColor="@color/purple_200"
                    android:layout_marginRight="5dp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/date"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/_20_05_2020"
                    android:textColor="@color/purple_200"
                    android:layout_marginRight="5dp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/order_status"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/orderStatusTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/in_progress"
                    android:textColor="#28A604"
                    android:layout_marginRight="5dp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/shop_name"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                 <TextView
                    android:id="@+id/shopNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/in_progress"
                    android:textColor="@color/purple_200"
                    android:layout_marginRight="5dp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/items"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/totalItemsTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/_8"
                    android:textColor="@color/purple_200"
                    android:layout_marginRight="5dp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/amount"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/amountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/_100"
                    android:textColor="@color/purple_200"
                    android:layout_marginRight="5dp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/delivery_address"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/addressTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/abc_city"
                    android:textColor="@color/purple_200"
                    android:layout_marginRight="5dp" />

            </TableRow>

        </TableLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/ordered_items"
        android:textAlignment="center"
        android:textColor="#E8E4D9"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_ordereditem"/>

</LinearLayout>