<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#E8E4D9"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/productPic"
            android:layout_width="175dp"
            android:layout_height="167dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_add_shopping_cart" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="197dp"
            android:layout_height="166dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/productPic"
            android:layout_toRightOf="@+id/productPic"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/productDiscountedNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rect05"
                android:padding="5dp"
                android:text="@string/_10_off"
                android:textColor="#af9f78" />

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title"
                android:textColor="#af9f78" />

            <TextView
                android:id="@+id/productQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/_1_kg"
                android:textColor="#af9f78" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/productDiscountedPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/_10"
                    android:textColor="#af9f78" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/productDiscountedPrice"
                    android:layout_toRightOf="@+id/productDiscountedPrice"
                    android:text="@string/_20"
                    android:textColor="#af9f78" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>